--- a/style.css
+++ b/style.css
@@ -2,4 +2,46 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
 }
+
+  /*figure {
+    box-align:center;
+    font-size:smaller;
+   } */
+
+figure img {
+  width: 900px;
+  
+}
+
+figcaption {
+  font-size:smaller;
+  text-align: center;
+}
+
+#featured-property {
+  text-align: center;
+}
+
+#featured-property p{
+  width: 800px;
+  margin: auto;
+  padding: 10px;
+}
+
+nav a {
+    padding: 10px;
+    background-color: grey;
+}
+
+#details div{
+    float: left;
+    background-color: red;
+    text-align: center;
+    width: 25%;
+    
+}
+
+
+
